unlocked folders (#47)